added fontawesome, and links to gitter and github. invisible dates. todo: tooltip for each action share social media?

--- a/css/stylesfede.css
+++ b/css/stylesfede.css
@@ -54,3 +54,9 @@ body {
     margin-left: -33%;
     margin-top: -33%;
 }
+.cd-date {
+    visibility: hidden;
+}
+a.cd-read-more:hover {
+    background: #2196f3 !important;
+}
